# notion-cli

./: .gitignore  Makefile  cli.py  dev-env.source  dev-env.source.sample  ls.spec  notioncli.py  notioncli.spec  pyproject.toml  readme.md  requirements.txt  setup.py
notioncli/: __init__.py  __main__.py  cli.py
tests/: test_notion_cli.py
