[project]
name = "notion-cli"
version = "1.0.1"
description = "A CLI for notion.io"
license = { text = "MIT License" }
authors = [
    { name = "Josh Holbrook", email = "josh.holbrook@gmail.com"},
    { name = "Kris Hansen", email = "delight.fillet-0v@icloud.com"}
]
readme = "README.md"


dependencies = [
  "notion-client",
  "pytz",
  "termcolor"
]

[tool.black]
line-length = 88

[tool.isort]
profile = "google"
known_first_party = []
known_application = [ "notioncli" ]

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"

[tool.pyright]
include = ["notioncli"]
